force-app/main/default/objects/Activity/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <label>Action Items</label>
    <type>TextArea</type>
</CustomField>