force-app/main/default/objects/Activity/fields/Key_Discussion_Points__c.field-meta.xml
<CustomField>
    <fullName>Key_Discussion_Points__c</fullName>
    <label>Key Discussion Points</label>
    <type>TextArea</type>
</CustomField>