force-app/main/default/objects/Activity/fields/Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Task_Category__c</fullName>
    <label>Task Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Due Diligence Request</fullName>
            </value>
            <value>
                <fullName>Document Share</fullName>
            </value>
            <value>
                <fullName>Meeting Prep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>